# llm-analysis-bot

./: .env.example  .gitignore  COMPLIANCE_SUMMARY.md  Dockerfile  EVALUATION_COMPLIANCE_REPORT.md  FIXES_APPLIED.md  PROMPTS.md  QUICKSTART.md  README.md  README_HF.md  SECURITY_TEST_REPORT.md  SUBMISSION_CHECKLIST.md  VIVA_PREP.md  agent.py  browser.py  main.py  pyproject.toml  requirements.txt  setup_env.bat  simple_test.py  solver.py  submitter.py  test_encoding.py  test_encoding_sync.py  test_endpoint.py  test_groq_solver.py  test_secret_leak.py  test_secret_quick.py
LLMFiles/: runner.py
tools/: __init__.py  add_dependencies.py  download_file.py  run_code.py  send_request.py  web_scraper.py
